style.css
@font-face {
    font-family: "trajan-bold";
    src: url("./assets/fonts/trajan_bold.eot");
    src: url("./assets/fonts/trajan_bold.woff2") format("woff2");
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    text-decoration: none;
    text-align: center;

}

body {

    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;

    height: 100vh;
    background-color: rgb(29, 29, 29);
}

.site-logo {
    margin-top: 50px;
    margin-bottom: 50px;
    width: 450px;
}

.up-timer,.timer,.down-timer {
    color: white;
    font-family: 'trajan-bold', Arial, sans-serif;
    font-weight:bold;
    font-style:normal;
}

.up-timer, .down-timer {
    font-size: 30px;
}

.fic {
    font-size: 1.5rem;
}

.timer {
    font-size: 50px;
    margin-top: 12px;
    margin-bottom: 12px;
}

.footer {
    display: flex;
    align-items: center;
    justify-content: space-between;

    position: absolute;
    bottom: 0;

    height: 50px;
    width: 100vw;

    font-family: 'trajan-bold', Arial, sans-serif;
    font-weight:bold;
    font-style:normal;
}


.creator a, .right-footer {

    color: white;
    margin: 30px;
}

.github a{
    color: white;
}

.about a{
    margin-right: 30px;
    color: white;
}

.about a:hover{
    text-decoration: underline;
}
.creator a:hover, .about a:hover, .github a:hover {
    text-decoration: underline;
}

@media (max-width: 1399px)
{
    .up-timer, .down-timer {
        font-size: 18px;
    }
    .timer {
        font-size: 25px;
    }
}

@media (max-width: 599px)
{
    .github a{
        margin: 0px;
        color: white;
    }
    
    .about a{
        margin: 0px;
        color: white;
    }
}

@media (max-width: 500px)
{
    .timer, .down-timer {
        padding: 0px 30px;
    }
}

@media (max-width: 599px)
{
    .site-logo {
        width: 300px;
    }
}

@media (max-height: 680px) and (max-width: 599px)
{
    .site-logo {
        width: 200px;
    }
    .timer {
        padding: 0px 30px;
        font-size: 30px;
    }
    .up-timer,.down-timer {
        font-size: 15px;
    }
    .down-timer {
        padding-bottom: 15px;
    }
    .github a{
        font-size: 12px;
    }
    
    .about a{
        font-size: 12px;
    }
    .creator a {
        font-size: 12px;
        padding-bottom:  10px;
    }
}

/* Footer */
@media (max-width: 640px)
{
    .footer {
        flex-direction: column;
    }
    .right-footer {
        display: flex;
        flex-direction: column;
        gap: 20px;
    }
    .right-footer span {
        font-size: 1.5rem;
    }
    .footer p {
        padding-bottom: 30px;
    }
}

